add sqlite database with new tables and data

--- a/TUI.FlightManagerExercice/FlightManager.Repository/FlightManager.Repository.csproj
+++ b/TUI.FlightManagerExercice/FlightManager.Repository/FlightManager.Repository.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="myDb\FlightManagerDB.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="myDb\FlightManagerDB.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.109.2" />
+  </ItemGroup>
+
 </Project>
