Add LoadAirports and CreateFlight

--- a/TUI.FlightManagerExercice/FlightManager.Web/appsettings.json
+++ b/TUI.FlightManagerExercice/FlightManager.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=..\\FlightManager.Repository\\myDb\\FlightManagerDB.db;Version=3"
+  }
 }
