--- a/TUI.FlightManagerExercice/FlightManager.Repository/FlightManager.Repository.csproj
+++ b/TUI.FlightManagerExercice/FlightManager.Repository/FlightManager.Repository.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.109.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FlightManager.Module\FlightManager.Module.csproj" />
+  </ItemGroup>
+
 </Project>
